monticore-generator/src/test/resources/cocos/invalid/A4090/A4090h.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4090;

grammar A4090h {

  A = "a";
  C = "c";
  D = "d";
  B = who:A who:C who:D;

}
